--- a/css/jquery.qtip.css
+++ b/css/jquery.qtip.css
@@ -565,3 +565,28 @@
 	-ms-filter: none;
 }
 
+/**
+ * episteme-style.
+ *
+ * Tested with IE 8, IE 9, Chrome 18, Firefox 9, Opera 11.
+ * Does not work with IE 7.
+ */
+.ui-tooltip-episteme{
+	background: #ECF2E1;
+	color:#304221;
+	border-color: #ECF2E1;
+}
+.ui-tooltip-episteme .ui-tooltip-titlebar{
+	background: #FAFAF0;
+	box-shadow: 0px 2px 15px #AAA;
+	border-bottom: 3px solid #79A04B;
+}
+
+
+
+
+
+
+
+
+
