--- a/css/layout.css
+++ b/css/layout.css
@@ -291,7 +291,7 @@ body {
     background-color: #000000:
   }
 
-  .ui-state-highlight {
+ /* .ui-state-highlight {
     float: left;
     display: block;
     width: 126px;
@@ -299,7 +299,7 @@ body {
     background: #cccccc;
     border: 1px solid #999;
     margin: 0 10px;
-  }
+  }*/
 
 
 
@@ -312,28 +312,32 @@ body {
     float: right;
   }
 
-  #selection-panel h2{
+  #selection-panel h2,#wizard h2, .stepDesc{
     padding: 15px 0 10px 0;
     font-weight: normal;
-    font-family: 'Open Sans', Arial, Helvetica, sans-serif;
+    font-family: 'Open Sans', Arial, Helvetica, sans-serif !important;
     font-size: 20px;
     text-align: left;
   }
-  #selection-panel form .skill-level-closure{
+  #selection-panel form .skill-level-closure, #wizard .skill-level-closure{
     display: block;
     padding: 9px 9px;
     margin: 4px 0;
     min-width: 615px;
   }
-  #selection-panel form .skill-level-closure:hover{
+  #selection-panel form .skill-level-closure:hover,#wizard .skill-level-closure:hover{
     background: #ECF2E1;
     /*background: url('../images/stps_bg.png') repeat;*/
     box-shadow: 0px 0px 4px #79A04B;
   }
-  #selection-panel form label{
+  #selection-panel form label,.stepContainer label{
     margin-left: 15px;
     font-size: 14px;
     color: #333333;
+    display: inline-block;
+    width: 175px;
+
+
   }
   #selection-panel form select{
     font-size: 15px;
@@ -483,6 +487,9 @@ body {
     background-size: 100% 300%;
     -o-background-size: 100% 300%;
     -webkit-background-size: 100% 300%;
+  }
+  .list_offers  .add-arrow{
+    float: left;
   }
 
   #main-content .back-arrow + #report-container h2 {
@@ -689,4 +696,11 @@ body {
 
     background-position:center;
   }
-
+.skill-level-closure #checkBoxes{
+  float:right;
+}
+.skill-level-closure #remuneration, .skill-level-closure #budget,.skill-level-closure #experience{
+  border:0; 
+  color:#f6931f; 
+  font-weight:bold;
+}
