Falta pequeño bug en carga inicial

--- a/css/jquery.qtip.css
+++ b/css/jquery.qtip.css
@@ -581,7 +581,17 @@
 	box-shadow: 0px 2px 15px #AAA;
 	border-bottom: 3px solid #79A04B;
 }
-
+#ui-tooltip-modal{
+	max-width: 420px;
+ 
+	-moz-box-shadow: 0 0 10px 1px rgba(0,0,0,.5);
+	-webkit-box-shadow: 0 0 10px 1px rgba(0,0,0,.5);
+	box-shadow: 0 0 10px 1px rgba(0,0,0,.5);
+}
+ 
+#ui-tooltip-modal .ui-tooltip-content{
+	padding: 10px;
+}
 
 
 
