--- a/css/layout.css
+++ b/css/layout.css
@@ -114,7 +114,7 @@ body {
 
 
 /* @begin selection panel styling */
-#selection-panel {
+#selection-panel, .widgetArea, #endPanel {
   background-color: #EFEFEF;
   margin: auto;
   margin-bottom: 60px;
@@ -162,7 +162,7 @@ body {
 #selection-panel .service {
   background-color: #D9D9D9;
   border: 2px dashed #767676;
-  display: block;
+  display: inline-block;
   margin: 15px 15px 15px 15px;
   padding: 0;
   width: 147px;
@@ -299,83 +299,83 @@ body {
     background: #cccccc;
     border: 1px solid #999;
     margin: 0 10px;
-  }*/
+    }*/
 
 
 
-  #selection-panel #title-bar h2 {
-    margin-right: 40px;
-  }
+    #selection-panel #title-bar h2 {
+      margin-right: 40px;
+    }
 
-  #selection-panel #title-bar .add-arrow{
-    margin-top: 4px;
-    float: right;
-  }
+    #selection-panel #title-bar .add-arrow{
+      margin-top: 4px;
+      float: right;
+    }
 
-  #selection-panel h2,#wizard h2, .stepDesc{
-    padding: 15px 0 10px 0;
-    font-weight: normal;
-    font-family: 'Open Sans', Arial, Helvetica, sans-serif !important;
-    font-size: 20px;
-    text-align: left;
-  }
-  #selection-panel form .skill-level-closure, #wizard .skill-level-closure{
-    display: block;
-    padding: 9px 9px;
-    margin: 4px 0;
-    min-width: 615px;
-  }
-  #selection-panel form .skill-level-closure:hover,#wizard .skill-level-closure:hover{
-    background: #ECF2E1;
-    /*background: url('../images/stps_bg.png') repeat;*/
-    box-shadow: 0px 0px 4px #79A04B;
-  }
-  #selection-panel form label,.stepContainer label{
-    margin-left: 15px;
-    font-size: 14px;
-    color: #333333;
-    display: inline-block;
-    width: 175px;
-
-
-  }
-  #selection-panel form select{
-    font-size: 15px;
-    padding: 4px;
-    color: #666666;
-  }
-  #selection-panel form button{
-
-    margin-top: 15px;
-
-    font-size: 18px;
-    font-weight: bold;
-    font-family: 'Open Sans', Arial, Helvetica, sans-serif;
-    letter-spacing: 1px;
-    padding: 7px 17px;
-    cursor: pointer;
-
-    color: #f5f8ef;
-
-    background: #79A04B; /* for non-css3 browsers */
-    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#79A04B', endColorstr='#668e3c'); /* for IE */
-    background: -webkit-gradient(linear, left top, left bottom, from(#79A04B), to(#668e3c)); /* for webkit browsers */
-    background: -moz-linear-gradient(top,  #79A04B,  #668e3c); /* for firefox 3.6+ */ 
-
-    -moz-box-shadow: 0 2px 4px rgba(0,0,0,0.3);
-    -webkit-box-shadow: 0 2px 4px rgba(0,0,0,0.3);
-    box-shadow: 0 2px 4px rgba(0,0,0,0.3);
-
-    border: 1px solid #668e3c;
-    border-radius: 5px;
-    -moz-border-radius: 5px;
-    -webkit-border-radius: 5px;
-  }
+    #selection-panel h2,#wizard h2, .stepDesc{
+      padding: 15px 0 10px 0;
+      font-weight: normal;
+      font-family: 'Open Sans', Arial, Helvetica, sans-serif !important;
+      font-size: 20px;
+      text-align: left;
+    }
+    #selection-panel form .skill-level-closure, #wizard .skill-level-closure{
+      display: block;
+      padding: 9px 9px;
+      margin: 4px 0;
+      min-width: 615px;
+    }
+    #selection-panel form .skill-level-closure:hover,#wizard .skill-level-closure:hover{
+      background: #ECF2E1;
+      /*background: url('../images/stps_bg.png') repeat;*/
+      box-shadow: 0px 0px 4px #79A04B;
+    }
+    #selection-panel form label,.stepContainer label{
+      margin-left: 15px;
+      font-size: 14px;
+      color: #333333;
+      display: inline-block;
+      width: 175px;
 
 
+    }
+    #selection-panel form select{
+      font-size: 15px;
+      padding: 4px;
+      color: #666666;
+    }
+    #selection-panel form button{
 
-  /* @begin */
-  #selection-panel .service .dropped { 
+      margin-top: 15px;
+
+      font-size: 18px;
+      font-weight: bold;
+      font-family: 'Open Sans', Arial, Helvetica, sans-serif;
+      letter-spacing: 1px;
+      padding: 7px 17px;
+      cursor: pointer;
+
+      color: #f5f8ef;
+
+      background: #79A04B; /* for non-css3 browsers */
+      filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#79A04B', endColorstr='#668e3c'); /* for IE */
+      background: -webkit-gradient(linear, left top, left bottom, from(#79A04B), to(#668e3c)); /* for webkit browsers */
+      background: -moz-linear-gradient(top,  #79A04B,  #668e3c); /* for firefox 3.6+ */ 
+
+      -moz-box-shadow: 0 2px 4px rgba(0,0,0,0.3);
+      -webkit-box-shadow: 0 2px 4px rgba(0,0,0,0.3);
+      box-shadow: 0 2px 4px rgba(0,0,0,0.3);
+
+      border: 1px solid #668e3c;
+      border-radius: 5px;
+      -moz-border-radius: 5px;
+      -webkit-border-radius: 5px;
+    }
+
+
+
+    /* @begin */
+    #selection-panel .service .dropped { 
   /*float: left;
   display: block;
   */
@@ -449,7 +449,7 @@ body {
     color:#FFF;
   }
 
- 
+
   .remove:hover {
     color: #79A04B;
   }
@@ -700,47 +700,73 @@ body {
 
     background-position:center;
   }
-.skill-level-closure #checkBoxes{
-  float:right;
-}
-.skill-level-closure #remuneration, .skill-level-closure #budget,.skill-level-closure #experience{
-  border:0; 
-  color:#f6931f; 
-  font-weight:bold;
-}
-.remove-line {
-  display: inline-block;
-  height: 20px;
-  width: 20px;
-  font-size: 16px;
-  font-family: verdana, 'Open Sans', arial, helvetica;
-  cursor: pointer;
-  color: #79A04B;
-  margin-left: 20px;
-  visibility: hidden;
-}
-.skill-level-closure:hover .remove-line {
-  visibility: visible;
-}
-.skill-level-closure:hover .remove-line:hover {
-  color: #3c4f25;
-  
-  font-weight: bold;
-}
-.widgetArea{
-  margin-top: 20px;
-  display:inline-block;
-  font-family: verdana, arial;
-  padding-bottom: 15px;
-  font-size: 20px;
-  color: #666;
-}
-#province{
-  
-}
-#new-widget.add-arrow{
-  float:right;
-}
-#currentselection{
+  .skill-level-closure #checkBoxes{
+    float:right;
+  }
+  .skill-level-closure #remuneration, .skill-level-closure #budget,.skill-level-closure #experience{
+    border:0; 
+    color:#f6931f; 
+    font-weight:bold;
+  }
+  .remove-line {
+    display: inline-block;
+    height: 20px;
+    width: 20px;
+    font-size: 16px;
+    font-family: verdana, 'Open Sans', arial, helvetica;
+    cursor: pointer;
+    color: #79A04B;
+    margin-left: 20px;
+    visibility: hidden;
+  }
+  .skill-level-closure:hover .remove-line {
+    visibility: visible;
+  }
+  .skill-level-closure:hover .remove-line:hover {
+    color: #3c4f25;
 
-}
+    font-weight: bold;
+  }
+  .widgetArea{
+    float:left;
+/*    margin-top: 20px;
+*/    display:inline-block;
+
+    font-family: verdana, arial;
+/*    padding-bottom: 15px;
+*/    font-size: 13px;
+    color: #666;
+  }
+  #province{
+    float: right;
+    margin-top: 15px;
+  }
+  #new-widget.add-arrow{
+    float:right;
+  }
+  #currentselection{
+
+  }
+  .widgetArea a,#endPanel a{
+    text-decoration: none;
+    color:#666;
+  }
+  #widgetBody{
+    margin-left: auto;
+    margin-right: auto;
+    width: 12em;
+  }
+  #endPanel{
+    font-size: 17px;
+    color: #666;
+  }
+  #endPanel h2{
+    font-size: 20px;
+  }
+  #endPanel ul{
+    margin-top: 20px;
+    
+  }
+  #endPanel ul li{
+    padding-top: 10px;
+  }
